cmake_minimum_required(VERSION 3.26)
project(oop_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(StringSet StringSet.cpp)
add_executable(Stack stack.cpp)
add_executable(Razionale razionale.cpp)
add_executable(Vector vector.cpp)
add_executable(Map map.cpp)
add_executable(Complex Complex.cpp)
add_executable(Partito Partito.cpp
        Partito.cpp)